nexus-operator/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"    
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  labels:
    kubernetes.io/metadata.name: nexus
    argocd.argoproj.io/managed-by: openshift-gitops
  name: nexus
