nexus-operator/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  namespace: nexus
spec:
  port:
    targetPort: application
  tls:
    termination: edge
  to:
    kind: Service
    name: example-nexusrepo-sonatype-nexus-service
    weight: 100
  wildcardPolicy: None
